feat: add interactive FAQ and GUI AI helper

--- a/gui/package.json
+++ b/gui/package.json
@@ -1,7 +1,7 @@
 {
   "name": "electron-vite-react",
   "version": "2.2.0",
-  "main": "dist-electron/main/index.js",
+  "main": "dist-electron/main/index.cjs",
   "description": "Electron Vite React boilerplate.",
   "author": "草鞋没号 <308487730@qq.com>",
   "license": "MIT",
@@ -16,7 +16,7 @@
     "dev": "vite",
     "build": "tsc && vite build && electron-builder",
     "preview": "vite preview",
-    "pretest": "vite build --mode=test",
+    "pretest": "vite build --mode=test && node scripts/postbuild-electron.cjs",
     "test": "vitest run"
   },
   "dependencies": {
@@ -35,8 +35,9 @@
     "@types/react-dom": "^18.3.1",
     "@types/turndown": "^5.0.6",
     "@vitejs/plugin-react": "^4.3.3",
+    "esbuild": "^0.21.5",
     "autoprefixer": "^10.4.20",
-    "electron": "^33.2.0",
+    "electron": "^32.2.0",
     "electron-builder": "^24.13.3",
     "postcss": "^8.4.49",
     "postcss-import": "^16.1.0",
