feat: Complete GUI implementation with all 10 polish features
PandocPro GUI is now production-ready with:

✅ BACKEND OPTIMIZATION (Phase 1-2)
- Rate limiting (60 req/min per IP)
- HTTP compression (gzip/deflate, ETag, 304 responses)
- ProcessPool for concurrent conversions (max 5)
- Result memoization (1-hour TTL, 100-entry LRU)
- Metrics endpoint (/api/metrics)
- Enhanced logging with DEBUG mode
- Hot reload dev server with auto-restart

✅ GUI IMPLEMENTATION (M2-M7)
- M2-M3: IPC infrastructure (11 channels, secure preload bridge)
- M4: Action controls (segmented buttons, activity log, history)
- M5: WYSIWYG editor (TipTap with Markdown, split preview)
- M6: Settings & telemetry (persistent config, daily stats)
- M7: Packaging & deployment (code signing, CI/CD, auto-update)

✅ 10 POLISH FEATURES
1. Native OS notifications on conversion complete
2. History file shortcuts (open/reveal in Finder)
3. Telemetry dashboard (7-day stats)
4. First-launch checklist (dependency validation)
5. Large document fallback (>50MB file support)
6. Keyboard shortcuts (Cmd+S, Cmd+E, Cmd+1-4, etc.)
7. Drag-and-drop file support
8. File system integration (open with default app)
9. Settings persistence (~/.config/pandocpro/)
10. Build automation (GitHub Actions CI/CD)

NEW FILES:
- gui/electron/main/notifications.ts - Desktop notifications
- gui/electron/main/telemetry.ts - Daily stats tracking
- gui/src/components/OnboardingChecklist.tsx - First-launch UI
- .github/workflows/build.yml - CI/CD pipeline
- gui/SIGNING.md - Code signing guide (204 lines)
- IMPLEMENTATION-COMPLETE.md - Feature overview
- FINAL-STATUS.md - Project completion summary

MODIFIED FILES:
- gui/electron-builder.json - Enhanced with code signing
- gui/electron/main/conversion.ts - Notifications & telemetry
- gui/electron/main/files.ts - File open handlers
- gui/electron/preload/index.ts - New IPC APIs
- gui/src/App.tsx - Keyboard shortcuts, drag-drop, UI
- ui-server/server.js - Backend optimizations

VERIFICATION:
- 

--- a/gui/package.json
+++ b/gui/package.json
@@ -1,7 +1,7 @@
 {
   "name": "electron-vite-react",
   "version": "2.2.0",
-  "main": "dist-electron/main/index.cjs",
+  "main": "dist-electron/main/index.mjs",
   "description": "Electron Vite React boilerplate.",
   "author": "草鞋没号 <308487730@qq.com>",
   "license": "MIT",
@@ -13,7 +13,8 @@
   },
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "node scripts/dev-runner.js",
+    "dev:renderer": "vite",
     "build": "tsc && vite build && electron-builder",
     "preview": "vite preview",
     "pretest": "vite build --mode=test && node scripts/postbuild-electron.cjs",
