--- a/gui/package.json
+++ b/gui/package.json
@@ -1,7 +1,7 @@
 {
   "name": "electron-vite-react",
   "version": "2.2.0",
-  "main": "dist-electron/main/index.mjs",
+  "main": "dist-electron/main/index.cjs",
   "description": "Electron Vite React boilerplate.",
   "author": "草鞋没号 <308487730@qq.com>",
   "license": "MIT",
