feat: Major GUI UX overhaul with AI auto-detection
- Enhanced Dashboard with Quick Actions and live stats
- Smart drag-and-drop with visual feedback
- Intelligent error handling with actionable solutions
- Conversion presets (Academic, Business, Blog, Auto-Detect)
- Visual document status indicators
- AI auto-detection for 10+ providers (Ollama, Gemini, OpenAI, Claude, DeepSeek, Qwen, Mistral, Perplexity, Grok, GLM)
- One-click AI provider setup in Settings
- FAQ AI integration with shared CLI/GUI config
- Improved Settings UI with collapsible sections
- Desktop notifications and progress tracking
- Updated README with comprehensive feature documentation

--- a/gui/package.json
+++ b/gui/package.json
@@ -21,12 +21,18 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@fontsource/manrope": "^5.2.8",
+    "@fontsource/source-sans-3": "^5.2.9",
     "@tiptap/extension-code-block-lowlight": "^3.10.5",
     "@tiptap/extension-placeholder": "^3.10.5",
     "@tiptap/react": "^3.10.5",
     "@tiptap/starter-kit": "^3.10.5",
+    "@types/dompurify": "^3.0.5",
+    "dompurify": "^3.3.0",
     "electron-updater": "^6.3.9",
+    "framer-motion": "^12.23.25",
     "lowlight": "^3.3.0",
+    "lucide-react": "^0.555.0",
     "marked": "^17.0.0",
     "turndown": "^7.2.2"
   },
@@ -36,12 +42,12 @@
     "@types/react-dom": "^18.3.1",
     "@types/turndown": "^5.0.6",
     "@vitejs/plugin-react": "^4.3.3",
-    "esbuild": "^0.21.5",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.4.22",
     "electron": "^32.2.0",
     "electron-builder": "^24.13.3",
-    "postcss": "^8.4.49",
-    "postcss-import": "^16.1.0",
+    "esbuild": "^0.21.5",
+    "postcss": "^8.5.6",
+    "postcss-import": "^16.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.15",
