Add UI server health checks, notifications, and regression tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,5 +29,8 @@ jobs:
       - name: Lint
         run: npm run lint
 
+      - name: UI server tests
+        run: npm run test:ui
+
       - name: Test
         run: npm test
