--- a/gui/package.json
+++ b/gui/package.json
@@ -56,5 +56,17 @@
     "vite-plugin-electron": "^0.29.0",
     "vite-plugin-electron-renderer": "^0.14.6",
     "vitest": "^2.1.5"
+  },
+  "build": {
+    "appId": "com.motacola.pandocpro",
+    "productName": "PandocPro",
+    "mac": {
+      "category": "public.app-category.productivity",
+      "identity": null,
+      "signIgnore": ".*"
+    },
+    "dmg": {
+      "sign": false
+    }
   }
 }
