--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Install GUI dependencies
+        run: npm ci --prefix gui
+
       - name: Lint
         run: npm run lint
 
