--- a/gui/package.json
+++ b/gui/package.json
@@ -18,7 +18,8 @@
     "build": "tsc && vite build && electron-builder",
     "preview": "vite preview",
     "pretest": "vite build --mode=test && node scripts/postbuild-electron.cjs",
-    "test": "vitest run"
+    "test": "vitest run",
+    "lint": "eslint . --ext .ts,.tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
     "@fontsource/manrope": "^5.2.8",
@@ -41,11 +42,19 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/turndown": "^5.0.6",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.22",
     "electron": "^32.2.0",
     "electron-builder": "^24.13.3",
     "esbuild": "^0.21.5",
+    "eslint": "^8.57.0",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.5.6",
     "postcss-import": "^16.1.1",
     "react": "^18.3.1",
