Implement provider-backed analysis, telemetry, and UX hardening

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,8 +32,8 @@ jobs:
       - name: Lint
         run: npm run lint
 
-      - name: UI server tests
-        run: npm run test:ui
-
       - name: Test
         run: npm test
+
+      - name: GUI tests
+        run: npm run test --prefix gui
