--- a/gui/package.json
+++ b/gui/package.json
@@ -19,7 +19,8 @@
     "preview": "vite preview",
     "pretest": "vite build --mode=test && node scripts/postbuild-electron.cjs",
     "test": "vitest run",
-    "lint": "eslint . --ext .ts,.tsx --report-unused-disable-directives --max-warnings 0"
+    "lint": "eslint . --ext .ts,.tsx --report-unused-disable-directives",
+    "lint:strict": "eslint . --ext .ts,.tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
     "@fontsource/manrope": "^5.2.8",
