--- a/gui/package.json
+++ b/gui/package.json
@@ -19,8 +19,8 @@
     "preview": "vite preview",
     "pretest": "vite build --mode=test && node scripts/postbuild-electron.cjs",
     "test": "vitest run",
-    "lint": "eslint . --ext .ts,.tsx --report-unused-disable-directives",
-    "lint:strict": "eslint . --ext .ts,.tsx --report-unused-disable-directives --max-warnings 0"
+    "lint": "eslint . --ext .ts,.tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:warn": "eslint . --ext .ts,.tsx --report-unused-disable-directives"
   },
   "dependencies": {
     "@fontsource/manrope": "^5.2.8",
@@ -47,6 +47,7 @@
     "@typescript-eslint/parser": "^7.1.0",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.22",
+    "baseline-browser-mapping": "^2.9.19",
     "electron": "^32.2.0",
     "electron-builder": "^24.13.3",
     "esbuild": "^0.21.5",
